--- a/unidad3.html
+++ b/unidad3.html
@@ -28,7 +28,7 @@
     <script defer src="js/components/footer.js"></script>
 
     <!--Scripts propios-->
-    <script defer src="js/cargaContenidos/refreshContentWhenClickBack.js"></script>
+    <!-- <script defer src="js/cargaContenidos/refreshContentWhenClickBack.js"></script> -->
     <script defer src="js/toggleMenuLateralUnity.js"></script>
     <script defer src="js/menuSticky.js"></script>
     <script defer src="js/collapsible.js"></script>
@@ -78,7 +78,7 @@
                         class="material-icons">arrow_back</i></a>
                 <a class="brand-logo titleUnity white-text">Unidad 3&nbsp;&nbsp;
                     <span class="border1 textoStandar titleUnityColorUnit3">
-                        Título de la unidad 3
+                        Gestión técnica y ambiental del proyecto
                     </span>
                 </a>
                 <!--Barra de progreso de lectura en modo computadora-->
@@ -110,52 +110,67 @@
                                 <a contador="0"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2 activeLinkOptionsContentUnit3"
                                     id="a1tutorialButton">
-                                    <i contador="0" class="deskOption material-icons clbktx">school</i>
-                                    <p contador="0" class="deskOption clbktx">Inicio</p>
+                                    <i contador="0" class="deskOption material-icons clbktx">extension</i>
+                                    <p contador="0" class="deskOption clbktx">Unidad de competencia</p>
                                 </a>
 
-                                <a contador=""
+                                <a contador="1"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a10tutorialButton" href="manual.html">
-                                    <i contador="" class="deskOption material-icons clbktx">sos</i>
-                                    <p contador="" class="deskOption clbktx">Manual de usuario</p>
+                                    id="a3tutorialButton">
+                                    <i contador="1" class="deskOption material-icons clbktx">assessment</i>
+                                    <p contador="1" class="deskOption clbktx">Evaluación de los aprendizajes</p>
                                 </a>
-
-
+                                
 
                                 <ul id="a2tutorialButton" class="collapsible clgreyl2 border1 shadow2">
                                     <li>
                                         <div class="collapsible-header clgreyl2 clbktx"><i
                                                 class="material-icons">local_library</i>Contenidos</div>
                                         <div class="collapsible-body">
-                                            <a contador="1"
+                                            <a contador="2"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 mainSectionMenu leftBorderUnit3">
                                                 Introducción
                                             </a>
-                                            <a contador="2"
-                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 mainSectionMenu leftBorderUnit3">
-                                                1.1 La empresa
-                                            </a>
                                             <a contador="3"
-                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
-                                                1.1.1 Constitución jurídica
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 mainSectionMenu leftBorderUnit3">
+                                                3.1 Plan de gestión para la dirección del proyecto 
                                             </a>
                                             <a contador="4"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
-                                                1.1.2 El área financiera en la estructura organizacional
+                                                3.1.1 Gestión de Integración del proyecto 
+                                            </a>
+                                            <a contador="4"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
+                                                3.1.2 Gestión del conocimiento
                                             </a>
                                             <a contador="5"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 mainSectionMenu leftBorderUnit3">
-                                                1.2 Función y objetivo de las finanzas empresariales
+                                                3.2 Plan de desarrollo del software 
+                                            </a>
+                                            <a contador="3"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
+                                                3.2.1 Actividades para el análisis de requerimientos y diseño de la arquitectura del software 
+ 
+                                            </a>
+                                            <a contador="3"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
+                                                3.2.2 Actividades para la programación 
+                                            </a>
+                                            <a contador="3"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
+                                                3.2.3 Actividades para las pruebas e implementación 
+                                            </a>
+                                            <a contador="3"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
+                                                3.2.4 Actividades para el despliegue y mantenimiento
+                                            </a>
+                                            <a contador="3"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
+                                                3.2.5 Documentación  
                                             </a>
                                             <a contador="6"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 mainSectionMenu leftBorderUnit3">
-                                                1.3 Las finanzas empresariales y su relación con otras disciplinas
-                                            </a>
-                                            <a contador="7"
-                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 mainSectionMenu leftBorderUnit3">
-                                                1.4 Factores del micro y macro ambiente que impactan a la empresa y
-                                                a sus finanzas
+                                                3.3 Gestión de sostenibilidad
                                             </a>
                                         </div>
                                     </li>
