--- a/polilibro.html
+++ b/polilibro.html
@@ -72,7 +72,7 @@
             <a href="unidad3.html" class="linkContainer" id="a3Link">
                 <div id="a3" class="cardUnit clgreyl1 shadow2 border2">
                     <p class="clbktx textoTitulo">Unidad 3</p>
-                    <p class="clbktx textoStandar">Subtitulo de la unidad</p>
+                    <p class="clbktx textoStandar">Gestión técnica y ambiental del proyecto</p>
                 </div>
             </a>
             <a href="unidad4.html" class="linkContainer" id="a4Link">
