--- a/polilibro.html
+++ b/polilibro.html
@@ -78,7 +78,7 @@
             <a href="unidad4.html" class="linkContainer" id="a4Link">
                 <div id="a4" class="cardUnit clgreyl1 shadow2 border2">
                     <p class="clbktx textoTitulo">Unidad 4</p>
-                    <p class="clbktx textoStandar">Subtitulo de la unidad</p>
+                    <p class="clbktx textoStandar">Gestión del presupuesto del proyecto</p>
                 </div>
             </a>
             <a href="unidad5.html" class="linkContainer" id="a5Link">
