--- a/unidad4.html
+++ b/unidad4.html
@@ -28,7 +28,7 @@
     <script defer src="js/components/footer.js"></script>
 
     <!--Scripts propios-->
-    <script defer src="js/cargaContenidos/refreshContentWhenClickBack.js"></script>
+    <!-- <script defer src="js/cargaContenidos/refreshContentWhenClickBack.js"></script> -->
     <script defer src="js/toggleMenuLateralUnity.js"></script>
     <script defer src="js/menuSticky.js"></script>
     <script defer src="js/collapsible.js"></script>
@@ -78,7 +78,7 @@
                         class="material-icons">arrow_back</i></a>
                 <a class="brand-logo titleUnity white-text">Unidad 4&nbsp;&nbsp;
                     <span class="border1 textoStandar titleUnityColorUnit4">
-                        Título de la unidad 4
+                        Gestión del presupuesto del proyecto
                     </span>
                 </a>
                 <!--Barra de progreso de lectura en modo computadora-->
@@ -108,18 +108,19 @@
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
                                 <a contador="0"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2 activeLinkOptionsContentUnit4"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2 activeLinkOptionsContentUnit3"
                                     id="a1tutorialButton">
-                                    <i contador="0" class="deskOption material-icons clbktx">school</i>
-                                    <p contador="0" class="deskOption clbktx">Inicio</p>
+                                    <i contador="0" class="deskOption material-icons clbktx">extension</i>
+                                    <p contador="0" class="deskOption clbktx">Unidad de competencia</p>
                                 </a>
 
-                                <a contador=""
+                                <a contador="1"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a10tutorialButton" href="manual.html">
-                                    <i contador="" class="deskOption material-icons clbktx">sos</i>
-                                    <p contador="" class="deskOption clbktx">Manual de usuario</p>
+                                    id="a3tutorialButton">
+                                    <i contador="1" class="deskOption material-icons clbktx">assessment</i>
+                                    <p contador="1" class="deskOption clbktx">Evaluación de los aprendizajes</p>
                                 </a>
+
 
 
 
@@ -128,35 +129,47 @@
                                         <div class="collapsible-header clgreyl2 clbktx"><i
                                                 class="material-icons">local_library</i>Contenidos</div>
                                         <div class="collapsible-body">
-                                            <a contador="1"
-                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 mainSectionMenu leftBorderUnit4">
-                                                Introducción
-                                            </a>
                                             <a contador="2"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 mainSectionMenu leftBorderUnit4">
-                                                1.1 La empresa
+                                                4.1 Presupuesto de inversión 
                                             </a>
                                             <a contador="3"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 secondarySectionMenu leftBorderSecondaryUnit4">
-                                                1.1.1 Constitución jurídica
+                                                4.1.1 Inversión propia 
                                             </a>
                                             <a contador="4"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 secondarySectionMenu leftBorderSecondaryUnit4">
-                                                1.1.2 El área financiera en la estructura organizacional
+                                                4.1.2 Inversión financiada 
                                             </a>
                                             <a contador="5"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 mainSectionMenu leftBorderUnit4">
-                                                1.2 Función y objetivo de las finanzas empresariales
+                                                4.2 Presupuestos de egresos 
                                             </a>
                                             <a contador="6"
-                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 mainSectionMenu leftBorderUnit4">
-                                                1.3 Las finanzas empresariales y su relación con otras disciplinas
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 secondarySectionMenu leftBorderSecondaryUnit4">
+                                                4.2.1 Costos de desarrollo 
                                             </a>
                                             <a contador="7"
-                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 mainSectionMenu leftBorderUnit4">
-                                                1.4 Factores del micro y macro ambiente que impactan a la empresa y
-                                                a sus finanzas
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 secondarySectionMenu leftBorderSecondaryUnit4">
+                                                4.2.2 Gastos de venta 
                                             </a>
+                                            <a contador="8"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 secondarySectionMenu leftBorderSecondaryUnit4">
+                                                4.2.3 Gastos de administración 
+                                            </a>
+                                            <a contador="9"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 secondarySectionMenu leftBorderSecondaryUnit4">
+                                                4.2.4 Gastos financieros 
+                                            </a>
+                                            <a contador="10"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 secondarySectionMenu leftBorderSecondaryUnit4">
+                                                4.2.5 Otros gastos a ponderar 
+                                            </a>
+                                            <a contador="11"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 mainSectionMenu leftBorderUnit4">
+                                                4.3 Presupuesto de ventas o ingresos
+                                            </a>
+
                                         </div>
                                     </li>
                                 </ul>
