Actualización de los glosarios de la unidades 3, 4 y 5

--- a/glosario2.html
+++ b/glosario2.html
@@ -60,74 +60,89 @@
         </div>
 
         <div class="browserContainer-conceptsContainer readyContentScreen" id="parentConceptsGlosario">
-  
+
             <!--unidad 2-->
+
+            <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
+                <p class="textoTitulo clbktx">Finanzas Empresariales</p>
+                <p class="textoStandar clbktx">
+                    Campo de estudio que se encarga de la gestión, uso y distribución de recursos financieros dentro de
+                    una empresa para cumplir con sus objetivos.
+                </p>
+            </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Innovación</p>
                 <p class="textoStandar clbktx">
-                    Transformar una oportunidad de mejora en valor mediante cambios en un sistema de referencia. Puede ser en productos, procesos o métodos de organización, con el fin de generar ventajas competitivas sostenibles en el mercado.
+                    Proceso a través del cual una empresa introduce mejoras en productos, servicios o procesos con el
+                    objetivo de generar valor y adaptarse al mercado.
                 </p>
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Design Thinking</p>
                 <p class="textoStandar clbktx">
-                    Metodología de innovación creada por la empresa IDEO en los años 70. Consiste en un proceso iterativo que consta de 5 
-                    fases, combinando procesos divergentes y convergentes para explorar, ampliar la visión de los retos y soluciones, y 
-                    seleccionar las mejores ideas. Se centra en el usuario y sus necesidades, y se aplica en el diseño de productos, servicios y modelos de negocio.
+                    Metodología centrada en el usuario que busca generar soluciones innovadoras mediante un proceso
+                    iterativo dividido en cinco fases: empatizar, definir, idear, prototipar y testar.
                 </p>
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Empatizar/Descubrir</p>
-                <p class="textoStandar clbktx">Primera fase del Design Thinking donde se busca comprender el problema, las necesidades y el contexto de los usuarios involucrados en la solución. Se utilizan técnicas como la observación y la encuesta para recopilar información valiosa y crear un vínculo estrecho con los usuarios.</p>
-            </div>
-
-            <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Definir</p>
+                <p class="textoTitulo clbktx">Prototipado</p>
                 <p class="textoStandar clbktx">
-                    Segunda fase del Design Thinking donde se depura la información obtenida en la fase de empatizar/descubrir para identificar y definir las necesidades tanto emocionales como físicas de los usuarios. Se buscan revelaciones ("insights") que contribuyan
-                     a generar nuevos planteamientos y se define claramente el problema, sirviendo como punto de referencia común para el equipo.
+                    Fase en el proceso de innovación donde las ideas se transforman en modelos tangibles para evaluar su
+                    viabilidad y obtener retroalimentación.
                 </p>
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Idear</p>
+                <p class="textoTitulo clbktx">Tasa Interna de Retorno (TIR)</p>
                 <p class="textoStandar clbktx">
-                    Tercera fase del Design Thinking donde se generan múltiples ideas creativas y diferentes para desarrollar soluciones ante un problema. Se utilizan técnicas de creatividad como el brainstorming, SCAMPER y Da Vinci para explorar diversas 
-                    posibilidades de solución.
+                    Indicador financiero que representa la tasa de descuento que hace que el valor presente neto (VPN)
+                    de un proyecto sea igual a cero, indicando la rentabilidad del proyecto.
                 </p>
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Prototipar</p>
+                <p class="textoTitulo clbktx">Valor Presente Neto (VPN)</p>
                 <p class="textoStandar clbktx">
-                    Cuarta fase del Design Thinking donde las ideas se convierten en tangibles mediante la construcción de prototipos o escenarios. 
-                    Estos prototipos permiten visualizar y manipular las posibles soluciones, identificando aspectos a mejorar antes de obtener 
-                    el resultado final.
+                    Indicador financiero que calcula la diferencia entre el valor presente de los flujos de efectivo
+                    futuros y la inversión inicial, permitiendo evaluar la rentabilidad de un proyecto.
                 </p>
             </div>
-
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Testeo (Validar)</p>
+                <p class="textoTitulo clbktx">Relación Costo-Beneficio (RCB)</p>
                 <p class="textoStandar clbktx">
-                    Quinta fase del Design Thinking donde se presenta el prototipo a los usuarios para recoger sus opiniones y realizar ajustes. 
-                    El objetivo es obtener nuevas ideas para mejorar a partir de críticas constructivas y dudas, lo que permite desarrollar 
-                    colaborativamente la solución y presentar diversas mejoras al prototipo.
+                    Técnica utilizada para evaluar la viabilidad de un proyecto comparando los costos totales con los
+                    beneficios esperados, proporcionando una visión clara de las implicaciones financieras.
                 </p>
             </div>
 
-            <div class="conceptCard clgreyl1 shadow3 border2" id="noResultContent" style="display: none;">
-                <p class="textoTitulo clbktx">No hay resultados</p>
-                <div class="defaultImage">
-                    <div class="defaultImageContent" id="notFound"></div>
-                </div>
-                <span class="referenciaIcono clgreyl1 border1 clbktx">Ilustración de &nbsp; <a
-                        href="https://icons8.com/illustrations/style--pixeltrue">Pixel true</a> &nbsp;, &nbsp; <a
-                        href="https://icons8.com/illustrations/">Ouch!</a></span>
+            <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
+                <p class="textoTitulo clbktx">Empatía en Design Thinking</p>
+                <p class="textoStandar clbktx">
+                    Primera fase del Design Thinking en la que se busca comprender las necesidades y problemas de los
+                    usuarios, recopilando información valiosa para generar soluciones efectivas.
+                </p>
             </div>
+
+            <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
+                <p class="textoTitulo clbktx">Matriz de Decisión</p>
+                <p class="textoStandar clbktx">
+                    Herramienta que ayuda a comparar alternativas o propuestas en un proceso de toma de decisiones,
+                    organizada en criterios, ponderaciones y puntuaciones.
+                </p>
+            </div>
+
+            <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
+                <p class="textoTitulo clbktx">Retorno de la Inversión (ROI)</p>
+                <p class="textoStandar clbktx">
+                    Indicador financiero que mide la ganancia o pérdida generada en relación con la inversión realizada,
+                    utilizado para evaluar la rentabilidad de un proyecto.
+                </p>
+            </div>
+
         </div>
 
         <!--Contenido de carga de la página-->
