--- a/unidad5.html
+++ b/unidad5.html
@@ -167,7 +167,7 @@
 
                                 <a contador=""
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a9tutorialButton" href="glosario.html">
+                                    id="a9tutorialButton" href="glosario5.html">
                                     <i contador="" class="deskOption material-icons clbktx">library_books</i>
                                     <p contador="" class="deskOption clbktx">Glosario</p>
                                 </a>
@@ -277,7 +277,7 @@
 
                 <!--Pagina externa-->
                 <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="glosario.html"><i
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="glosario5.html"><i
                             class="material-icons clbktx">library_books</i>Glosario</a></li>
 
                 <li contador="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
