--- a/glosario2.html
+++ b/glosario2.html
@@ -64,7 +64,7 @@
             <!--unidad 2-->
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Finanzas Empresariales</p>
+                <p class="textoTitulo clbktx">Finanzas empresariales</p>
                 <p class="textoStandar clbktx">
                     Campo de estudio que se encarga de la gestión, uso y distribución de recursos financieros dentro de
                     una empresa para cumplir con sus objetivos.
@@ -80,7 +80,7 @@
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Design Thinking</p>
+                <p class="textoTitulo clbktx">Design thinking</p>
                 <p class="textoStandar clbktx">
                     Metodología centrada en el usuario que busca generar soluciones innovadoras mediante un proceso
                     iterativo dividido en cinco fases: empatizar, definir, idear, prototipar y testar.
@@ -96,7 +96,7 @@
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Tasa Interna de Retorno (TIR)</p>
+                <p class="textoTitulo clbktx">Tasa interna de retorno (TIR)</p>
                 <p class="textoStandar clbktx">
                     Indicador financiero que representa la tasa de descuento que hace que el valor presente neto (VPN)
                     de un proyecto sea igual a cero, indicando la rentabilidad del proyecto.
@@ -104,7 +104,7 @@
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Valor Presente Neto (VPN)</p>
+                <p class="textoTitulo clbktx">Valor presente neto (VPN)</p>
                 <p class="textoStandar clbktx">
                     Indicador financiero que calcula la diferencia entre el valor presente de los flujos de efectivo
                     futuros y la inversión inicial, permitiendo evaluar la rentabilidad de un proyecto.
@@ -112,7 +112,7 @@
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Relación Costo-Beneficio (RCB)</p>
+                <p class="textoTitulo clbktx">Relación costo-beneficio (RCB)</p>
                 <p class="textoStandar clbktx">
                     Técnica utilizada para evaluar la viabilidad de un proyecto comparando los costos totales con los
                     beneficios esperados, proporcionando una visión clara de las implicaciones financieras.
@@ -120,15 +120,15 @@
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Empatía en Design Thinking</p>
+                <p class="textoTitulo clbktx">Empatía en design thinking</p>
                 <p class="textoStandar clbktx">
-                    Primera fase del Design Thinking en la que se busca comprender las necesidades y problemas de los
+                    Primera fase del design thinking en la que se busca comprender las necesidades y problemas de los
                     usuarios, recopilando información valiosa para generar soluciones efectivas.
                 </p>
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Matriz de Decisión</p>
+                <p class="textoTitulo clbktx">Matriz de decisión</p>
                 <p class="textoStandar clbktx">
                     Herramienta que ayuda a comparar alternativas o propuestas en un proceso de toma de decisiones,
                     organizada en criterios, ponderaciones y puntuaciones.
@@ -136,7 +136,7 @@
             </div>
 
             <div identificador_select="u2" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Retorno de la Inversión (ROI)</p>
+                <p class="textoTitulo clbktx">Retorno de la inversión (ROI)</p>
                 <p class="textoStandar clbktx">
                     Indicador financiero que mide la ganancia o pérdida generada en relación con la inversión realizada,
                     utilizado para evaluar la rentabilidad de un proyecto.
