--- a/glosario4.html
+++ b/glosario4.html
@@ -64,91 +64,91 @@
             <!--unidad 4-->
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Presupuesto de Inversión</p>
+                <p class="textoTitulo clbktx">Presupuesto de inversión</p>
                 <p class="textoStandar clbktx">
                     Un plan detallado que estima los recursos financieros necesarios para iniciar un proyecto, considerando aspectos como mobiliario, equipo, recursos humanos, hardware, software, servicios externos, infraestructura, y contingencias.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Alcance del Proyecto</p>
+                <p class="textoTitulo clbktx">Alcance del proyecto</p>
                 <p class="textoStandar clbktx">
                     Define los requisitos, funciones y características de un proyecto, así como los resultados esperados. Es crucial para planificar adecuadamente los costos y recursos.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Presupuesto de Egresos</p>
+                <p class="textoTitulo clbktx">Presupuesto de egresos</p>
                 <p class="textoStandar clbktx">
                     Detalla los gastos planificados durante un período específico. Se puede desglosar en gastos fijos (renta, sueldos) y variables (costos de producción).
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Inversión Propia</p>
+                <p class="textoTitulo clbktx">Inversión propia</p>
                 <p class="textoStandar clbktx">
                     Financiamiento de un proyecto con recursos personales o de la organización, sin recurrir a fuentes externas. Involucra la evaluación de recursos financieros disponibles, la creación de un presupuesto y la reserva de fondos para imprevistos.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Inversión Financiada</p>
+                <p class="textoTitulo clbktx">Inversión financiada</p>
                 <p class="textoStandar clbktx">
                     Recursos obtenidos de fuentes externas como préstamos bancarios, inversores o subvenciones para financiar un proyecto. Incluye la necesidad de un plan de negocios sólido y la evaluación de diferentes opciones de financiamiento.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Costos de Desarrollo</p>
+                <p class="textoTitulo clbktx">Costos de desarrollo</p>
                 <p class="textoStandar clbktx">
                     Incluyen salarios del personal, herramientas de software, equipo de hardware, licencias, consultorías externas, y otros gastos necesarios para el desarrollo de un proyecto.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Gastos de Administración</p>
+                <p class="textoTitulo clbktx">Gastos de administración</p>
                 <p class="textoStandar clbktx">
                     Gastos relacionados con la gestión y operación diaria de una empresa, como sueldos administrativos, renta de oficinas, servicios profesionales, y mantenimiento de infraestructura tecnológica.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Presupuesto de Ventas o Ingresos</p>
+                <p class="textoTitulo clbktx">Presupuesto de ventas o ingresos</p>
                 <p class="textoStandar clbktx">
                     Estimación de los ingresos que se esperan generar durante un período específico. Se basa en datos históricos, análisis de tendencias, y factores externos que puedan influir en las ventas.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Gastos Financieros</p>
+                <p class="textoTitulo clbktx">Gastos financieros</p>
                 <p class="textoStandar clbktx">
                     Incluyen los costos relacionados con la obtención de financiamiento, intereses sobre préstamos, comisiones bancarias, fluctuaciones cambiarias y otros gastos financieros.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Costos de Investigación y Desarrollo (I+D)</p>
+                <p class="textoTitulo clbktx">Costos de investigación y desarrollo (I+D)</p>
                 <p class="textoStandar clbktx">
                     Gastos relacionados con la investigación y el desarrollo de nuevos productos, servicios o tecnologías dentro de una empresa.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Responsabilidad Social Corporativa (RSC)</p>
+                <p class="textoTitulo clbktx">Responsabilidad social corporativa (RSC)</p>
                 <p class="textoStandar clbktx">
                     Iniciativas que buscan contribuir al bienestar social y ambiental, como programas de voluntariado, patrocinios y actividades de responsabilidad social.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Innovación Tecnológica</p>
+                <p class="textoTitulo clbktx">Innovación tecnológica</p>
                 <p class="textoStandar clbktx">
                     Costos asociados con la adopción de nuevas tecnologías y la mejora de la eficiencia empresarial mediante la actualización de sistemas y plataformas digitales.
                 </p>
             </div>
 
             <div identificador_select="u4" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Control de Costos</p>
+                <p class="textoTitulo clbktx">Control de costos</p>
                 <p class="textoStandar clbktx">
                     Proceso continuo de monitoreo y ajuste de los costos a lo largo del desarrollo de un proyecto para maximizar su valor y mantener la eficiencia.
                 </p>
