--- a/glosario5.html
+++ b/glosario5.html
@@ -70,14 +70,14 @@
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Recurso Didáctico Digital (RDD)</p>
+                <p class="textoTitulo clbktx">Recurso didáctico digital (RDD)</p>
                 <p class="textoStandar clbktx">
                     Herramienta educativa digital diseñada para apoyar el proceso de aprendizaje mediante contenidos estructurados, interactividad y accesibilidad.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Unidad de Competencia</p>
+                <p class="textoTitulo clbktx">Unidad de competencia</p>
                 <p class="textoStandar clbktx">
                     Conjunto de aprendizajes y habilidades que el estudiante debe alcanzar al concluir una unidad temática.
                 </p>
@@ -91,112 +91,112 @@
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Evaluación de los Aprendizajes</p>
+                <p class="textoTitulo clbktx">Evaluación de los aprendizajes</p>
                 <p class="textoStandar clbktx">
                     Proceso mediante el cual se mide el grado de adquisición de competencias, conocimientos y habilidades, utilizando diferentes actividades y herramientas evaluativas.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Requerimientos Técnicos</p>
+                <p class="textoTitulo clbktx">Requerimientos técnicos</p>
                 <p class="textoStandar clbktx">
                     Condiciones mínimas de software y hardware necesarias para acceder y utilizar un recurso digital de manera óptima.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Estados Financieros Proforma</p>
+                <p class="textoTitulo clbktx">Estados financieros proforma</p>
                 <p class="textoStandar clbktx">
                     Proyecciones financieras que estiman la situación futura de una empresa basada en presupuestos, fundamentales para la planificación financiera y la evaluación de proyectos.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Estado de Resultados Proforma</p>
+                <p class="textoTitulo clbktx">Estado de resultados proforma</p>
                 <p class="textoStandar clbktx">
                     Documento financiero que proyecta los ingresos, costos, gastos y utilidades de una empresa en un período futuro.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Balance General Proforma</p>
+                <p class="textoTitulo clbktx">Balance general proforma</p>
                 <p class="textoStandar clbktx">
                     Documento financiero que proyecta la situación financiera futura de una empresa, incluyendo activos, pasivos y capital.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Estado de Flujo de Efectivo Proforma</p>
+                <p class="textoTitulo clbktx">Estado de flujo de efectivo proforma</p>
                 <p class="textoStandar clbktx">
                     Documento financiero que proyecta las entradas y salidas de efectivo futuras para evaluar la liquidez y capacidad de pago.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Indicadores Financieros de Evaluación de Proyectos</p>
+                <p class="textoTitulo clbktx">Indicadores financieros de evaluación de proyectos</p>
                 <p class="textoStandar clbktx">
                     Métricas utilizadas para evaluar la viabilidad, rentabilidad y eficiencia de proyectos, como ROI, Costo-Beneficio, VPN, y TIR.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Retorno de la Inversión (ROI)</p>
+                <p class="textoTitulo clbktx">Retorno de la inversión (ROI)</p>
                 <p class="textoStandar clbktx">
                     Indicador que mide la ganancia o pérdida en relación con la inversión realizada.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Relación Costo-Beneficio (RCB)</p>
+                <p class="textoTitulo clbktx">Relación costo-beneficio (RCB)</p>
                 <p class="textoStandar clbktx">
                     Técnica que compara los costos totales de un proyecto con los beneficios esperados para determinar su viabilidad.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Valor Presente Neto (VPN)</p>
+                <p class="textoTitulo clbktx">Valor presente neto (VPN)</p>
                 <p class="textoStandar clbktx">
                     Diferencia entre el valor presente de los flujos de efectivo futuros y la inversión inicial, utilizado para evaluar la rentabilidad de un proyecto.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Tasa Interna de Retorno (TIR)</p>
+                <p class="textoTitulo clbktx">Tasa interna de retorno (TIR)</p>
                 <p class="textoStandar clbktx">
                     Tasa de descuento que hace que el VPN de un proyecto sea igual a cero, usada para evaluar su viabilidad.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Matriz de Decisión</p>
+                <p class="textoTitulo clbktx">Matriz de decisión</p>
                 <p class="textoStandar clbktx">
                     Herramienta que organiza y compara alternativas en la toma de decisiones mediante criterios, ponderación y puntuación.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Flujos Netos de Efectivo</p>
+                <p class="textoTitulo clbktx">Flujos netos de efectivo</p>
                 <p class="textoStandar clbktx">
                     Diferencia entre las entradas y salidas de efectivo, que indica la liquidez disponible o déficit en caja.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Microentorno y Macroentorno</p>
+                <p class="textoTitulo clbktx">Microentorno y macroentorno</p>
                 <p class="textoStandar clbktx">
                     Factores internos (microentorno) y externos (macroentorno) que influyen en el desempeño y las decisiones de una empresa.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Legislación Vigente</p>
+                <p class="textoTitulo clbktx">Legislación vigente</p>
                 <p class="textoStandar clbktx">
                     Normas y regulaciones actuales que rigen la constitución y funcionamiento de una empresa.
                 </p>
             </div>
 
             <div identificador_select="u5" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Administración de Recursos</p>
+                <p class="textoTitulo clbktx">Administración de recursos</p>
                 <p class="textoStandar clbktx">
                     Gestión eficiente de recursos financieros, tecnológicos y humanos para cumplir los objetivos de una organización.
                 </p>
