--- a/glosario3.html
+++ b/glosario3.html
@@ -71,7 +71,7 @@
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Design Thinking</p>
+                <p class="textoTitulo clbktx">Design thinking</p>
                 <p class="textoStandar clbktx">
                     Metodología de innovación creada por la empresa IDEO en los años 70. Consiste en un proceso iterativo que consta de 5 
                     fases, combinando procesos divergentes y convergentes para explorar, ampliar la visión de los retos y soluciones, y 
@@ -80,7 +80,7 @@
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Empatizar/Descubrir</p>
+                <p class="textoTitulo clbktx">Empatizar/descubrir</p>
                 <p class="textoStandar clbktx">Primera fase del Design Thinking donde se busca comprender el problema, las necesidades y el contexto de los usuarios involucrados en la solución. Se utilizan técnicas como la observación y la encuesta para recopilar información valiosa y crear un vínculo estrecho con los usuarios.</p>
             </div>
 
@@ -111,7 +111,7 @@
 
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Testeo (Validar)</p>
+                <p class="textoTitulo clbktx">Testeo (validar)</p>
                 <p class="textoStandar clbktx">
                     Quinta fase del Design Thinking donde se presenta el prototipo a los usuarios para recoger sus opiniones y realizar ajustes. 
                     El objetivo es obtener nuevas ideas para mejorar a partir de críticas constructivas y dudas, lo que permite desarrollar 
@@ -120,91 +120,91 @@
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Integración del Proyecto</p>
+                <p class="textoTitulo clbktx">Integración del proyecto</p>
                 <p class="textoStandar clbktx">
                     Actividad que coordina y unifica los procesos del proyecto, asegurando que las actividades estén alineadas con los objetivos generales.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Gestión de Adquisiciones</p>
+                <p class="textoTitulo clbktx">Gestión de adquisiciones</p>
                 <p class="textoStandar clbktx">
                     Proceso que implica la compra de productos o servicios necesarios para un proyecto, incluyendo la selección de proveedores y la negociación de contratos.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Riesgos del Proyecto</p>
+                <p class="textoTitulo clbktx">Riesgos del proyecto</p>
                 <p class="textoStandar clbktx">
                     Eventos o condiciones inciertas que pueden tener un impacto positivo o negativo en los objetivos del proyecto.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Gestión de los Interesados</p>
+                <p class="textoTitulo clbktx">Gestión de los interesados</p>
                 <p class="textoStandar clbktx">
                     Identificación y gestión de las expectativas y necesidades de las personas o grupos que pueden afectar o ser afectados por el proyecto.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Modelo de Proceso</p>
+                <p class="textoTitulo clbktx">Modelo de proceso</p>
                 <p class="textoStandar clbktx">
                     Herramienta visual que representa el flujo de trabajo o secuencia de actividades de un proyecto.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Casos de Uso</p>
+                <p class="textoTitulo clbktx">Casos de uso</p>
                 <p class="textoStandar clbktx">
                     Técnica para capturar y describir las interacciones entre los usuarios y un sistema, generalmente representados en diagramas UML.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Descomposición Funcional</p>
+                <p class="textoTitulo clbktx">Descomposición funcional</p>
                 <p class="textoStandar clbktx">
                     Técnica para desglosar los procesos o sistemas en componentes más pequeños y manejables.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Checklist (Lista de Verificación)</p>
+                <p class="textoTitulo clbktx">Checklist (lista de verificación)</p>
                 <p class="textoStandar clbktx">
                     Conjunto de preguntas o criterios utilizados para revisar y asegurar que los requisitos de un proyecto o software se han cumplido.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Inspección de Software</p>
+                <p class="textoTitulo clbktx">Inspección de software</p>
                 <p class="textoStandar clbktx">
                     Técnica de revisión crítica para evaluar la conformidad de un software con los estándares o especificaciones definidas.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Pruebas Unitarias</p>
+                <p class="textoTitulo clbktx">Pruebas unitarias</p>
                 <p class="textoStandar clbktx">
                     Evaluaciones realizadas a componentes individuales del software para verificar su correcto funcionamiento.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Pruebas de Integración</p>
+                <p class="textoTitulo clbktx">Pruebas de integración</p>
                 <p class="textoStandar clbktx">
                     Validación de la interacción entre diferentes componentes del software para asegurar que trabajan de manera conjunta y correcta.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Pruebas de Aceptación del Usuario (UAT)</p>
+                <p class="textoTitulo clbktx">Pruebas de aceptación del usuario (UAT)</p>
                 <p class="textoStandar clbktx">
                     Proceso en el cual los usuarios finales prueban el software para verificar si cumple con sus expectativas y necesidades.
                 </p>
             </div>
 
             <div identificador_select="u3" class="conceptCard clgreyl1 shadow3 border2">
-                <p class="textoTitulo clbktx">Gestión de Sostenibilidad del Software</p>
+                <p class="textoTitulo clbktx">Gestión de sostenibilidad del software</p>
                 <p class="textoStandar clbktx">
                     Proceso de desarrollo y operación de software con un enfoque en minimizar el impacto ambiental, social y económico.
                 </p>
